kubernetes/gke_4_externaldns/part3_ingress/template_ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-gce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s-gce
  template:
    metadata:
      labels:
        app: hello-k8s-gce
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "80m"
          limits:
            memory: "128Mi"
            cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-gce
spec:
  # GCE Ingress has to be 'NodePort' or 'LoadBalancer'
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-k8s-gce

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-k8s-gce
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - host: $MY_DNS_NAME
    http:
      paths:
      - backend:
          serviceName: hello-k8s-gce
          servicePort: 80
        path: /*
